<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="16dp"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="?attr/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:id="@+id/add_reminder_layout_top"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:layout_height="148dp">

                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/reminder_title"
                    android:layout_marginLeft="72dp"
                    android:hint="@string/add_reminder"
                    android:textSize="25dp"
                    android:lines="4"
                    android:minLines="4"
                    android:gravity="top|left"
                    android:textColor="@android:color/white"
                    android:scrollHorizontally="false"
                    android:textColorHint="@color/primary_text_disabled_material_dark"
                    android:inputType="textCapWords|textMultiLine"
                    android:layout_marginRight="16dp"
                    android:layout_height="140dp"/>

        </LinearLayout>

        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_below="@id/add_reminder_layout_top"
            android:layout_height="fill_parent">

                <LinearLayout
                    android:background="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_marginTop="8dp"
                            android:text="@string/details"
                            android:id="@+id/details"
                            android:textSize="15dp"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="72dp"
                            android:textColor="@color/abc_secondary_text_material_dark"
                            android:layout_height="72dp"/>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:clickable="true"
                            android:onClick="setDate"
                            android:id="@+id/date"
                            android:background="?android:attr/selectableItemBackground"
                            android:layout_height="72dp">

                                <ImageView
                                    android:id="@+id/date_icon"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginRight="32dp"
                                    android:src="@drawable/ic_date_range"
                                    android:layout_centerVertical="true" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_centerVertical="true"
                                    android:layout_toRightOf="@id/date_icon"
                                    android:layout_height="wrap_content">

                                        <TextView
                                            android:id="@+id/date_text"
                                            android:textColor="@color/abc_primary_text_material_dark"
                                            android:layout_width="wrap_content"
                                            android:textSize="15dp"
                                            android:layout_height="wrap_content"
                                            android:text="@string/date" />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:id="@+id/set_date"
                                            android:textSize="15dp"
                                            android:textColor="@color/abc_secondary_text_material_dark"
                                            android:layout_height="wrap_content"/>

                                </LinearLayout>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:clickable="true"
                            android:onClick="setTime"
                            android:id="@+id/time"
                            android:background="?android:attr/selectableItemBackground"
                            android:layout_height="72dp">

                                <ImageView
                                    android:id="@+id/time_icon"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginRight="32dp"
                                    android:src="@drawable/ic_timer"
                                    android:layout_centerVertical="true" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_centerVertical="true"
                                    android:layout_toRightOf="@id/time_icon"
                                    android:layout_height="wrap_content">

                                        <TextView
                                            android:id="@+id/time_text"
                                            android:textColor="@color/abc_primary_text_material_dark"
                                            android:layout_width="wrap_content"
                                            android:textSize="15dp"
                                            android:layout_height="wrap_content"
                                            android:text="@string/time" />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:id="@+id/set_time"
                                            android:textSize="15dp"
                                            android:textColor="@color/abc_secondary_text_material_dark"
                                            android:layout_height="wrap_content"/>

                                </LinearLayout>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:id="@+id/repeat"
                            android:layout_height="72dp">

                                <ImageView
                                    android:id="@+id/repeat_icon"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginRight="32dp"
                                    android:src="@drawable/ic_repeat"
                                    android:layout_centerVertical="true" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:orientation="vertical"
                                    android:id="@+id/repeat_ll"
                                    android:layout_centerVertical="true"
                                    android:layout_toRightOf="@id/repeat_icon"
                                    android:layout_height="wrap_content">

                                        <TextView
                                            android:id="@+id/repeat_text"
                                            android:textColor="@color/abc_primary_text_material_dark"
                                            android:layout_width="wrap_content"
                                            android:textSize="15dp"
                                            android:layout_height="wrap_content"
                                            android:text="@string/repeat" />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:id="@+id/set_repeat"
                                            android:textSize="15dp"
                                            android:textColor="@color/abc_secondary_text_material_dark"
                                            android:layout_height="wrap_content"/>

                                </LinearLayout>

                                <Switch
                                    android:id="@+id/repeat_switch"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_alignParentRight="true"
                                    android:layout_marginRight="16dp"
                                    android:layout_marginLeft="8dp"
                                    android:checked="true"
                                    android:textOn="On"
                                    android:textOff="Off"/>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:id="@+id/RepeatNo"
                            android:clickable="true"
                            android:onClick="setRepeatNo"
                            android:background="?android:attr/selectableItemBackground"
                            android:layout_height="72dp">

                                <ImageView
                                    android:id="@+id/repeat_no_icon"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginRight="32dp"
                                    android:src="@drawable/ic_unfold_more"
                                    android:layout_centerVertical="true" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_centerVertical="true"
                                    android:layout_toRightOf="@id/repeat_no_icon"
                                    android:layout_height="wrap_content">

                                        <TextView
                                            android:id="@+id/repeat_no_text"
                                            android:textColor="@color/abc_primary_text_material_dark"
                                            android:layout_width="wrap_content"
                                            android:textSize="15dp"
                                            android:layout_height="wrap_content"
                                            android:text="@string/repeat_no" />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:id="@+id/set_repeat_no"
                                            android:textSize="15dp"
                                            android:textColor="@color/abc_secondary_text_material_dark"
                                            android:layout_height="wrap_content"/>

                                </LinearLayout>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:id="@+id/RepeatType"
                            android:clickable="true"
                            android:background="?android:attr/selectableItemBackground"
                            android:layout_height="72dp">

                                <ImageView
                                    android:id="@+id/repeat_type_icon"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginRight="32dp"
                                    android:src="@drawable/ic_subject"
                                    android:layout_centerVertical="true" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_centerVertical="true"
                                    android:layout_toRightOf="@id/repeat_type_icon"
                                    android:layout_height="wrap_content">

                                        <TextView
                                            android:id="@+id/repeat_type_text"
                                            android:textColor="@color/abc_primary_text_material_dark"
                                            android:layout_width="wrap_content"
                                            android:textSize="15dp"
                                            android:layout_height="wrap_content"
                                            android:text="@string/repeat_type" />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:id="@+id/set_repeat_type"
                                            android:textSize="15dp"
                                            android:textColor="@color/abc_secondary_text_material_dark"
                                            android:layout_height="wrap_content"/>

                                </LinearLayout>

                        </RelativeLayout>

                </LinearLayout>

        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btn_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/ic_notifications_active"
            android:layout_marginTop="168dp"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            />
</RelativeLayout>